--- a/Part1-Basics.ipynb
+++ b/Part1-Basics.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\""
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0,1\""
    ]
   },
   {
@@ -19,12 +19,12 @@
    "id": "cd798849",
    "metadata": {},
    "source": [
-    "## Check if the GPU available"
+    "# Check System Devices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "cbd8a0f9",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,8 @@
      "output_type": "stream",
      "text": [
       "Using device: cuda\n",
-      "NVIDIA GeForce RTX 3090\n"
+      "NVIDIA GeForce GTX 1070\n",
+      "NVIDIA GeForce GTX 1070\n"
      ]
     }
    ],
@@ -47,13 +48,61 @@
     "        device_name = torch.cuda.get_device_name(d)\n",
     "        print(device_name)\n",
     "    #\n",
-    "#\n"
+    "#\n",
+    "\n",
+    "device = torch.device('cuda:0')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41f0c74f",
+   "metadata": {},
+   "source": [
+    "# Autograd Example 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "0bf95871",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(4., device='cuda:0') 4.0\n",
+      "tensor(1., device='cuda:0') 1.0\n",
+      "tensor(0.2887, device='cuda:0') 0.28867513\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create tensors\n",
+    "x = torch.tensor(1., requires_grad=True, device=device)\n",
+    "w = torch.tensor(2., requires_grad=True, device=device)\n",
+    "b = torch.tensor(3., requires_grad=True, device=device)\n",
+    "\n",
+    "# x = torch.tensor(1., requires_grad=True).to(device)\n",
+    "# w = torch.tensor(2., requires_grad=True).to(device)\n",
+    "# b = torch.tensor(3., requires_grad=True).to(device)\n",
+    "\n",
+    "# Build a computational graph\n",
+    "y = w*x**2 + torch.sqrt(b)         # y = w*x^2 + b\n",
+    "\n",
+    "# Compute gradients\n",
+    "y.backward()\n",
+    "\n",
+    "# Print out the gradients\n",
+    "print(x.grad, (2*w*x).item())                            # dy/dx = 2*w*x\n",
+    "print(w.grad, (x**2).item())                             # dy/dw = x^2\n",
+    "print(b.grad, (0.5/torch.sqrt(b)).data.cpu().numpy())    # dy/db = (1/2)*(1/sqrt(b))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26e2dfeb",
+   "id": "2f4fd4c1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -61,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bf95871",
+   "id": "e14e9019",
    "metadata": {},
    "outputs": [],
    "source": []
