--- a/Part1-Basics.ipynb
+++ b/Part1-Basics.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "cbd8a0f9",
    "metadata": {},
    "outputs": [
@@ -55,15 +55,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41f0c74f",
+   "id": "26b4196e",
    "metadata": {},
    "source": [
-    "# Autograd Example 1"
+    "# Autograd Example 1 \n",
+    "## - tensor.backward()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "0bf95871",
    "metadata": {},
    "outputs": [
@@ -71,24 +72,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(4., device='cuda:0') 4.0\n",
-      "tensor(1., device='cuda:0') 1.0\n",
-      "tensor(0.2887, device='cuda:0') 0.28867513\n"
+      "tensor(12., device='cuda:0') 12.0\n",
+      "tensor(9., device='cuda:0') 9.0\n",
+      "tensor(0.5000, device='cuda:0') 0.5\n"
      ]
     }
    ],
    "source": [
     "#Create tensors\n",
-    "x = torch.tensor(1., requires_grad=True, device=device)\n",
+    "x = torch.tensor(3., requires_grad=True, device=device)\n",
     "w = torch.tensor(2., requires_grad=True, device=device)\n",
-    "b = torch.tensor(3., requires_grad=True, device=device)\n",
+    "b = torch.tensor(1., requires_grad=True, device=device)\n",
     "\n",
     "# x = torch.tensor(1., requires_grad=True).to(device)\n",
     "# w = torch.tensor(2., requires_grad=True).to(device)\n",
     "# b = torch.tensor(3., requires_grad=True).to(device)\n",
     "\n",
     "# Build a computational graph\n",
-    "y = w*x**2 + torch.sqrt(b)         # y = w*x^2 + b\n",
+    "y = w*x**2 + torch.sqrt(b)         # y = w*x^2 + sqrt(b)\n",
     "\n",
     "# Compute gradients\n",
     "y.backward()\n",
@@ -100,17 +101,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f4fd4c1",
+   "cell_type": "markdown",
+   "id": "0db0b257",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Autograd Example 2: \n",
+    "## - torch.autograd.grad() and high-order gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f6c6c773",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(tensor(12., device='cuda:0', grad_fn=<MulBackward0>),) 12.0\n",
+      "(tensor(4., device='cuda:0'),) 4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create tensors\n",
+    "x = torch.tensor(3., requires_grad=True, device=device)\n",
+    "w = torch.tensor(2., requires_grad=True, device=device)\n",
+    "b = torch.tensor(1., requires_grad=True, device=device)\n",
+    "\n",
+    "# Build a computational graph\n",
+    "y = w*x**2 + torch.sqrt(b)         # y = w*x^2 + b\n",
+    "\n",
+    "# Use autograd to compute the first-order gradient dy/dx\n",
+    "grad_x = torch.autograd.grad(y, x, create_graph=True)    # create_graph\n",
+    "print(grad_x, (2*w*x).item())\n",
+    "\n",
+    "# Use autograd to compute the second-order gradient d^2y/dx^2\n",
+    "grad_xx = torch.autograd.grad(grad_x, x)\n",
+    "print(grad_xx, 2*w.item())\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e14e9019",
+   "id": "963bf303",
    "metadata": {},
    "outputs": [],
    "source": []
