--- a/Part1-Basics.ipynb
+++ b/Part1-Basics.ipynb
@@ -10,6 +10,10 @@
     "import torch\n",
     "import numpy as np\n",
     "import os\n",
+    "import torchvision\n",
+    "import torch.nn as nn\n",
+    "import numpy as np\n",
+    "import torchvision.transforms as transforms\n",
     "\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0,1\""
    ]
@@ -72,6 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "True True True\n",
       "tensor(12., device='cuda:0') 12.0\n",
       "tensor(9., device='cuda:0') 9.0\n",
       "tensor(0.5000, device='cuda:0') 0.5\n"
@@ -84,9 +89,13 @@
     "w = torch.tensor(2., requires_grad=True, device=device)\n",
     "b = torch.tensor(1., requires_grad=True, device=device)\n",
     "\n",
+    "print(x.is_leaf, w.is_leaf, b.is_leaf)\n",
+    "\n",
     "# x = torch.tensor(1., requires_grad=True).to(device)\n",
     "# w = torch.tensor(2., requires_grad=True).to(device)\n",
     "# b = torch.tensor(3., requires_grad=True).to(device)\n",
+    "\n",
+    "# print(x.is_leaf, w.is_leaf, b.is_leaf)\n",
     "\n",
     "# Build a computational graph\n",
     "y = w*x**2 + torch.sqrt(b)         # y = w*x^2 + sqrt(b)\n",
@@ -144,9 +153,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd1b6edd",
+   "metadata": {},
+   "source": [
+    "# Autograd Example 3\n",
+    "## - grad of loss fn: A logistic regression example\n",
+    "## - (https://pytorch.org/docs/stable/nn.html#loss-functions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c76f47a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.0013],\n",
+      "        [-0.0149],\n",
+      "        [ 0.1073],\n",
+      "        [-0.0782],\n",
+      "        [ 0.1910]], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 100  # num of samples\n",
+    "d = 5    # design dimensions\n",
+    "X = torch.randn(N, d).to(device)   # data to device                     \n",
+    "y = torch.empty(N, dtype=torch.long).random_(2).to(device)\n",
+    "\n",
+    "w = torch.empty(d, 1, requires_grad=True, device=device)\n",
+    "w = torch.nn.init.normal_(w)  # initialize the weights\n",
+    "\n",
+    "yhat = 1/(1+torch.exp(-torch.matmul(X, w)))\n",
+    "yhat = yhat.squeeze() # convert to (N,) row vector\n",
+    "\n",
+    "loss = -torch.mean(y*torch.log(yhat) + (1 - y)* torch.log(1-yhat))\n",
+    "loss.backward()\n",
+    "print(w.grad)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fdd1261",
+   "metadata": {},
+   "source": [
+    "# Dataset and Dataloader\n",
+    "## - built-in datasets (https://pytorch.org/vision/stable/datasets.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6d769a94",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torchvision' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_638/3351839874.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m train_dataset = torchvision.datasets.MNIST(root='data/cache/',\n\u001b[0m\u001b[1;32m      2\u001b[0m                                            \u001b[0mtrain\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                            \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mToTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                                            download=True)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torchvision' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "train_dataset = torchvision.datasets.MNIST(root='data/cache/',\n",
+    "                                           train=True, \n",
+    "                                           transform=transforms.ToTensor(),\n",
+    "                                           download=True)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "963bf303",
+   "id": "a77eab43",
    "metadata": {},
    "outputs": [],
    "source": []
