--- a/Part4-Custom-Module.ipynb
+++ b/Part4-Custom-Module.ipynb
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fd395fdc5d0>"
+       "<matplotlib.legend.Legend at 0x7fe44cf30150>"
       ]
      },
      "execution_count": 2,
@@ -93,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "483212192fe44ec8946b56e0e472a844",
+       "model_id": "5b45b7bb04024a1e80ba12a79bd2970e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fd38e418890>"
+       "<matplotlib.legend.Legend at 0x7fe445370850>"
       ]
      },
      "execution_count": 3,
@@ -230,7 +230,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5acb54dfb2fc4406806e6a90109f52e3",
+       "model_id": "1470a9b082c04b129857d5c349d07d02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,17 +245,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mEpoch #0\t: \u001b[0mtrain_acc=0.517, test_acc=0.500\n",
-      "\u001b[31mEpoch #50\t: \u001b[0mtrain_acc=0.898, test_acc=0.894\n",
-      "\u001b[31mEpoch #100\t: \u001b[0mtrain_acc=0.976, test_acc=0.980\n",
-      "\u001b[31mEpoch #150\t: \u001b[0mtrain_acc=0.989, test_acc=0.988\n",
-      "\u001b[31mEpoch #200\t: \u001b[0mtrain_acc=0.991, test_acc=0.990\n",
-      "\u001b[31mEpoch #250\t: \u001b[0mtrain_acc=0.991, test_acc=0.990\n",
-      "\u001b[31mEpoch #300\t: \u001b[0mtrain_acc=0.991, test_acc=0.990\n",
-      "\u001b[31mEpoch #350\t: \u001b[0mtrain_acc=0.991, test_acc=0.990\n",
-      "\u001b[31mEpoch #400\t: \u001b[0mtrain_acc=0.991, test_acc=0.990\n",
-      "\u001b[31mEpoch #450\t: \u001b[0mtrain_acc=0.991, test_acc=0.990\n",
-      "\u001b[31mEpoch #500\t: \u001b[0mtrain_acc=0.991, test_acc=0.990\n"
+      "\u001b[31mEpoch #0\t: \u001b[0mbce=1.78375, train_acc=0.517, test_acc=0.500\n",
+      "\u001b[31mEpoch #50\t: \u001b[0mbce=0.23224, train_acc=0.898, test_acc=0.894\n",
+      "\u001b[31mEpoch #100\t: \u001b[0mbce=0.14903, train_acc=0.976, test_acc=0.980\n",
+      "\u001b[31mEpoch #150\t: \u001b[0mbce=0.02585, train_acc=0.989, test_acc=0.988\n",
+      "\u001b[31mEpoch #200\t: \u001b[0mbce=0.02059, train_acc=0.991, test_acc=0.990\n",
+      "\u001b[31mEpoch #250\t: \u001b[0mbce=0.00186, train_acc=0.991, test_acc=0.990\n",
+      "\u001b[31mEpoch #300\t: \u001b[0mbce=0.00932, train_acc=0.991, test_acc=0.990\n",
+      "\u001b[31mEpoch #350\t: \u001b[0mbce=0.00784, train_acc=0.991, test_acc=0.990\n",
+      "\u001b[31mEpoch #400\t: \u001b[0mbce=0.00073, train_acc=0.991, test_acc=0.990\n",
+      "\u001b[31mEpoch #450\t: \u001b[0mbce=0.00164, train_acc=0.991, test_acc=0.990\n",
+      "\u001b[31mEpoch #500\t: \u001b[0mbce=0.05261, train_acc=0.991, test_acc=0.990\n"
      ]
     }
    ],
@@ -335,11 +335,8 @@
     "        acc_tr = metric_accuracy_binary(model, dataset_train, device)\n",
     "        acc_te = metric_accuracy_binary(model, dataset_test, device)\n",
     "        cprint('r', 'Epoch #{}\\t: '.format(ie), end='')\n",
-    "        print('train_acc={:.3f}, test_acc={:.3f}'.format(acc_tr, acc_te))\n",
-    "        \n",
-    "    \n",
-    "\n",
-    "    \n"
+    "        print('bce={:.5f}, train_acc={:.3f}, test_acc={:.3f}'.format(loss.item(), acc_tr, acc_te))\n",
+    "        \n"
    ]
   },
   {
@@ -351,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "141bd0842dae488197f6a1236dfb9948",
+       "model_id": "0ef21e61e64c407ba1f9b7df812d7c85",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,17 +363,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mEpoch #0\t: \u001b[0mtrain_acc=0.959, test_acc=0.954\n",
-      "\u001b[31mEpoch #5\t: \u001b[0mtrain_acc=1.000, test_acc=1.000\n",
-      "\u001b[31mEpoch #10\t: \u001b[0mtrain_acc=1.000, test_acc=1.000\n",
-      "\u001b[31mEpoch #15\t: \u001b[0mtrain_acc=1.000, test_acc=1.000\n",
-      "\u001b[31mEpoch #20\t: \u001b[0mtrain_acc=1.000, test_acc=1.000\n",
-      "\u001b[31mEpoch #25\t: \u001b[0mtrain_acc=1.000, test_acc=1.000\n",
-      "\u001b[31mEpoch #30\t: \u001b[0mtrain_acc=1.000, test_acc=1.000\n",
-      "\u001b[31mEpoch #35\t: \u001b[0mtrain_acc=1.000, test_acc=1.000\n",
-      "\u001b[31mEpoch #40\t: \u001b[0mtrain_acc=1.000, test_acc=1.000\n",
-      "\u001b[31mEpoch #45\t: \u001b[0mtrain_acc=1.000, test_acc=1.000\n",
-      "\u001b[31mEpoch #50\t: \u001b[0mtrain_acc=1.000, test_acc=1.000\n"
+      "\u001b[31mEpoch #0\t: \u001b[0mbce=0.03443, train_acc=0.959, test_acc=0.954\n",
+      "\u001b[31mEpoch #5\t: \u001b[0mbce=0.00045, train_acc=1.000, test_acc=1.000\n",
+      "\u001b[31mEpoch #10\t: \u001b[0mbce=0.00019, train_acc=1.000, test_acc=1.000\n",
+      "\u001b[31mEpoch #15\t: \u001b[0mbce=0.00048, train_acc=1.000, test_acc=1.000\n",
+      "\u001b[31mEpoch #20\t: \u001b[0mbce=0.00052, train_acc=1.000, test_acc=1.000\n",
+      "\u001b[31mEpoch #25\t: \u001b[0mbce=0.00003, train_acc=1.000, test_acc=1.000\n",
+      "\u001b[31mEpoch #30\t: \u001b[0mbce=0.00001, train_acc=1.000, test_acc=1.000\n",
+      "\u001b[31mEpoch #35\t: \u001b[0mbce=0.00001, train_acc=1.000, test_acc=1.000\n",
+      "\u001b[31mEpoch #40\t: \u001b[0mbce=0.00007, train_acc=1.000, test_acc=1.000\n",
+      "\u001b[31mEpoch #45\t: \u001b[0mbce=0.00297, train_acc=1.000, test_acc=1.000\n",
+      "\u001b[31mEpoch #50\t: \u001b[0mbce=0.00000, train_acc=1.000, test_acc=1.000\n"
      ]
     }
    ],
@@ -455,7 +452,7 @@
     "        acc_tr = metric_accuracy_binary_logits(model, dataset_train, device)\n",
     "        acc_te = metric_accuracy_binary_logits(model, dataset_test, device)\n",
     "        cprint('r', 'Epoch #{}\\t: '.format(ie), end='')\n",
-    "        print('train_acc={:.3f}, test_acc={:.3f}'.format(acc_tr, acc_te))\n"
+    "        print('bce={:.5f}, train_acc={:.3f}, test_acc={:.3f}'.format(loss.item(), acc_tr, acc_te))\n"
    ]
   },
   {
