--- a/Part4-Custom-Module.ipynb
+++ b/Part4-Custom-Module.ipynb
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe44cf30150>"
+       "<matplotlib.legend.Legend at 0x7faa561992d0>"
       ]
      },
      "execution_count": 2,
@@ -93,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b45b7bb04024a1e80ba12a79bd2970e",
+       "model_id": "8e288858a8fd4b1685d20904d15d26f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe445370850>"
+       "<matplotlib.legend.Legend at 0x7faa527be110>"
       ]
      },
      "execution_count": 3,
@@ -230,7 +230,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1470a9b082c04b129857d5c349d07d02",
+       "model_id": "a186338e353e4db7af080ff58460dc47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -348,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ef21e61e64c407ba1f9b7df812d7c85",
+       "model_id": "a0d37c82507a44848c69cd5c2bd4c2f6",
        "version_major": 2,
        "version_minor": 0
       },
