--- a/Part2-nn-Module.ipynb
+++ b/Part2-nn-Module.ipynb
@@ -18,7 +18,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f42cc568fd0>"
+       "<matplotlib.legend.Legend at 0x7f78fd7e2310>"
       ]
      },
      "execution_count": 1,
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "564045ca23324ccb9de6cbc273cdf731",
+       "model_id": "af27a0223558414c974f6208a974a2b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f42c41faf50>"
+       "<matplotlib.legend.Legend at 0x7f78f6302ed0>"
       ]
      },
      "execution_count": 4,
@@ -260,7 +260,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f42c41197d0>"
+       "<matplotlib.legend.Legend at 0x7f78f6278190>"
       ]
      },
      "execution_count": 5,
@@ -401,7 +401,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdb303689653423182eec5ee4fd8f5b9",
+       "model_id": "87de7031e6b14e6ca0f15b8848c82ef4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -495,7 +495,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f42cc4b35d0>"
+       "<matplotlib.legend.Legend at 0x7f78f609d9d0>"
       ]
      },
      "execution_count": 9,
@@ -533,7 +533,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f42c1258790>"
+       "<matplotlib.legend.Legend at 0x7f78f2fbefd0>"
       ]
      },
      "execution_count": 10,
@@ -570,7 +570,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f42c11bf0d0>"
+       "<matplotlib.legend.Legend at 0x7f78f2f89dd0>"
       ]
      },
      "execution_count": 11,
