--- a/Part3-Optim.ipynb
+++ b/Part3-Optim.ipynb
@@ -14,6 +14,7 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
     "from misc import *\n",
+    "from dataset import *\n",
     "\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
@@ -116,7 +117,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ecc3d90563d47b0a2c153a4bd32881b",
+       "model_id": "2c8d0103289f415eb8281bd975cc6999",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,7 +207,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe0780faf10>"
+       "<matplotlib.legend.Legend at 0x7fc4f4134f50>"
       ]
      },
      "execution_count": 5,
