--- a/Part2-nn-Module.ipynb
+++ b/Part2-nn-Module.ipynb
@@ -18,7 +18,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fdc3e788a10>"
+       "<matplotlib.legend.Legend at 0x7fa8a7d68c10>"
       ]
      },
      "execution_count": 1,
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a48c2a55a0c4788b1330872abdab1e7",
+       "model_id": "5447f8d127264861bb356454a0df24e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fdc3e5589d0>"
+       "<matplotlib.legend.Legend at 0x7fa8a7bae950>"
       ]
      },
      "execution_count": 4,
@@ -260,7 +260,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fdc36a7b290>"
+       "<matplotlib.legend.Legend at 0x7fa8a005f490>"
       ]
      },
      "execution_count": 5,
@@ -405,7 +405,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46db6e56b5ca4593bc12b7c7f9a33165",
+       "model_id": "05f315fcdd2140398fdb07c36e7f8673",
        "version_major": 2,
        "version_minor": 0
       },
@@ -499,7 +499,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fdc368b2ad0>"
+       "<matplotlib.legend.Legend at 0x7fa88968d050>"
       ]
      },
      "execution_count": 9,
@@ -537,7 +537,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fdc36895cd0>"
+       "<matplotlib.legend.Legend at 0x7fa8895c53d0>"
       ]
      },
      "execution_count": 10,
@@ -574,7 +574,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fdc367ab190>"
+       "<matplotlib.legend.Legend at 0x7fa889578a50>"
       ]
      },
      "execution_count": 11,
