--- a/Part4-Custom-Module.ipynb
+++ b/Part4-Custom-Module.ipynb
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f2ccd88ca10>"
+       "<matplotlib.legend.Legend at 0x7f93d2325750>"
       ]
      },
      "execution_count": 2,
@@ -93,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c08841c3b534d06b8f2d4170167d962",
+       "model_id": "cc9e299980c4429daa0a08688631b453",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f2ccd6b4590>"
+       "<matplotlib.legend.Legend at 0x7f93d214b710>"
       ]
      },
      "execution_count": 3,
@@ -230,7 +230,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3821f24b1e6d45a8a92cb36760f3bd46",
+       "model_id": "cd6ee42d0a494477985159c8575fe37f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -348,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24d5db53dcc94c1095b119d991542662",
+       "model_id": "d62d4802f8b9463babdf88cd714b177f",
        "version_major": 2,
        "version_minor": 0
       },
