--- a/Part3-Optim.ipynb
+++ b/Part3-Optim.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a38c5dce",
+   "metadata": {},
+   "source": [
+    "# More torch.optim"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2d3969b8",
@@ -109,6 +117,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "29502c46",
+   "metadata": {},
+   "source": [
+    "# Train Scheduler"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "682acd6e",
@@ -117,7 +133,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78a9034119314df29ef8d4a3eead5b58",
+       "model_id": "5748e2d37ef94e81a7eb8eacceb2e5d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,6 +208,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50fb157b",
+   "metadata": {},
+   "source": [
+    "# Second order optimizer: L-BFGS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "2b881b8c",
@@ -207,7 +231,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f66a65300d0>"
+       "<matplotlib.legend.Legend at 0x7f2251f9bf90>"
       ]
      },
      "execution_count": 5,
