--- a/Part2-nn-Module.ipynb
+++ b/Part2-nn-Module.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1d906b57",
+   "id": "95447261",
    "metadata": {},
    "source": [
-    "# torch.nn \n",
-    "## - (https://pytorch.org/docs/stable/nn.html)"
+    "# A Linear Regression Example\n",
+    "## - Generate training data"
    ]
   },
   {
@@ -18,7 +18,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa8a7d68c10>"
+       "<matplotlib.legend.Legend at 0x7fe8d761d350>"
       ]
      },
      "execution_count": 1,
@@ -80,6 +80,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "479a84be",
+   "metadata": {},
+   "source": [
+    "## - Put the numpy nparray into torch Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "acce0c8f",
@@ -104,6 +112,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d94a7cbf",
+   "metadata": {},
+   "source": [
+    "## - Implement a linear regressor with nn.Module with built-in nn modules "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "c0616dbc",
@@ -112,7 +128,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5447f8d127264861bb356454a0df24e3",
+       "model_id": "0b18779cd97043fdb18f9c51d2f64870",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,22 +176,27 @@
     "    \n",
     "    def forward(self, X):\n",
     "        return self.linear(X)\n",
-    "    \n",
+    "\n",
+    "# instantiate a linear regressor and send to it device\n",
     "model = LinearRegressor(in_dim=1, out_dim=1).to(device)\n",
     "\n",
+    "# create dataloaders for training and testing\n",
     "train_loader = DataLoader(dataset_train, batch_size=len(dataset_train), shuffle=True)\n",
     "test_loader = DataLoader(dataset_test, batch_size=len(dataset_test), shuffle=False)\n",
     "\n",
+    "# training hypyterparameters\n",
     "epochs=1000\n",
     "lr=1e-2\n",
     "reg=1e-5\n",
     "\n",
+    "# instantiate optimizer and pass model's internal differentiable parameters\n",
     "optimizer = optim.Adam(model.parameters(), lr=lr, weight_decay=reg)\n",
     "\n",
     "hist_rmse_tr = []\n",
     "hist_rmse_te = []\n",
     "hist_pred_te = []\n",
     "\n",
+    "# Train\n",
     "for ie in tqdm(range(epochs+1)):\n",
     "    \n",
     "    Xtr, ytr = next(iter(train_loader))\n",
@@ -214,6 +235,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69352c5a",
+   "metadata": {},
+   "source": [
+    "## - Plot the training and testing loss history"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "d3d5197e",
@@ -222,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa8a7bae950>"
+       "<matplotlib.legend.Legend at 0x7fe8d01a8e50>"
       ]
      },
      "execution_count": 4,
@@ -252,6 +281,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c49c3ff",
+   "metadata": {},
+   "source": [
+    "## - Visualize the trained regressor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "e38d8f4c",
@@ -260,7 +297,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa8a005f490>"
+       "<matplotlib.legend.Legend at 0x7fe8d00d69d0>"
       ]
      },
      "execution_count": 5,
@@ -286,6 +323,15 @@
     "plt.plot(Xte.cpu().squeeze(), hist_pred_te[0,:].squeeze(), color='dimgray', label='model init')\n",
     "plt.plot(Xte.cpu().squeeze(), hist_pred_te[-1,:].squeeze(), color='green', label='model trained')\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3993dbc5",
+   "metadata": {},
+   "source": [
+    "# A more challenging example with NN\n",
+    "## - Generate training and testing data"
    ]
   },
   {
@@ -330,6 +376,14 @@
     "\n",
     "dataset_train = SimpleDataset(Xtr, ytr)\n",
     "dataset_test = SimpleDataset(Xte, yte)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e99801b",
+   "metadata": {},
+   "source": [
+    "## - Initialize a NN with nn.module"
    ]
   },
   {
@@ -397,6 +451,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1621756",
+   "metadata": {},
+   "source": [
+    "## Train"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "1aafa35e",
@@ -405,7 +467,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05f315fcdd2140398fdb07c36e7f8673",
+       "model_id": "9703067c4d92414fa1984140cc40265a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,6 +548,7 @@
     "hist_rmse_te = np.array(hist_rmse_te)\n",
     "hist_pred_te = np.array(hist_pred_te)\n",
     "\n",
+    "# You can saved the \n",
     "create_path('__chkp__')\n",
     "torch.save(model.state_dict(), os.path.join('__chkp__', 'pretrained.dict')) \n"
    ]
@@ -499,7 +562,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa88968d050>"
+       "<matplotlib.legend.Legend at 0x7fe8b4270610>"
       ]
      },
      "execution_count": 9,
@@ -537,7 +600,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa8895c53d0>"
+       "<matplotlib.legend.Legend at 0x7fe8b4198e50>"
       ]
      },
      "execution_count": 10,
@@ -574,7 +637,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa889578a50>"
+       "<matplotlib.legend.Legend at 0x7fe8b40d6ad0>"
       ]
      },
      "execution_count": 11,
