--- a/Part4-Custom-Module.ipynb
+++ b/Part4-Custom-Module.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "19ecd78e",
+   "metadata": {},
+   "source": [
+    "# Customize your own nn module"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "957d2994",
@@ -36,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f93d2325750>"
+       "<matplotlib.legend.Legend at 0x7f6f70149150>"
       ]
      },
      "execution_count": 2,
@@ -93,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc9e299980c4429daa0a08688631b453",
+       "model_id": "fb4c3d3703b943719b95659419ce858a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f93d214b710>"
+       "<matplotlib.legend.Legend at 0x7f6f7001a5d0>"
       ]
      },
      "execution_count": 3,
@@ -222,6 +230,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d75ae833",
+   "metadata": {},
+   "source": [
+    "# Reuse customized nn modules - An Logistic Regression Example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "a27377eb",
@@ -230,7 +246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd6ee42d0a494477985159c8575fe37f",
+       "model_id": "f57792b679c647b8b6a4b21aad75ac3e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -340,6 +356,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5944627b",
+   "metadata": {},
+   "source": [
+    "# Reuse customized nn modules - An NN binary Classification Example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "58c4ad09",
@@ -348,7 +372,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d62d4802f8b9463babdf88cd714b177f",
+       "model_id": "0747a604c4d64bc19d311cff3d0ed95a",
        "version_major": 2,
        "version_minor": 0
       },
